[3.1.1]
        * [ADDED]: #3106 ScriptingTcl has now "tcl_init" command to invoke full interpreter initialization, which creates [clock] commands and some others. It's not invoked automatically to avoid performane issues.
        * [ADDED]: New option in configuration dialog to decide whether you want to keep NULL values when entering empty strings in cells (new, more intuitive behavior), or overwrite NULLs with empty string values (as it used to be so far).
        * [ADDED]: Editor window has now "Find" and "Replace" toolbar buttons for those functions (which were already there, available under shortcuts).
        * [CHANGE]: #3135 Re-enabled possibility to close database list panel (and reopen it from the View menu entry).
        * [BUGFIX]: #3118 #3124 Fixed double precision numbers formatting.
        * [BUGFIX]: DbAndroid plugin: Fixed 'adb' automatic detection under Linux.
        * [BUGFIX]: #3126 #3092 Fixed problem with database versions in Android plugin.
        * [BUGFIX]: #3155 Fixed crash when confiriming custom FK value with Enter key.
        * [BUGFIX]: #3094 #3095 Fixed default FK value preselection when tabbing through cells.
        * [BUGFIX]: #3154 Fixed crash when mass replacing token to another token containing initial token.
        * [BUGFIX]: Fixed query generation for "UPDATE" and "DELETE" when invoking it from Database List context menu for the table.
        * [BUGFIX]: Fixed Ctrl+click (Cmd+click on MacOSX) handling of object names that require name wrapping (such as names with spaces in it).
        * [BUGFIX]: #3133 Fixed resolving tables with unusual (like cyrillic) characters in their names.
        * [BUGFIX]: #3096 Restored data editing by Return key hit, that got broken in 3.1.0 for MacOSX.
        * [BUGFIX]: Compilation fixes.

[3.1.0]
        * [ADDED]: SQLCipher plugin is now free, open source and distributed together with other standard plugins.