@@ -1,7 +1,7 @@
 [3.1.1]
-        * [ADDED]: #3106 ScriptingTcl has now "tcl_init" command to invoke full interpreter initialization, which creates [clock] commands and some others. It's not invoked automatically to avoid performane issues.
         * [ADDED]: New option in configuration dialog to decide whether you want to keep NULL values when entering empty strings in cells (new, more intuitive behavior), or overwrite NULLs with empty string values (as it used to be so far).
         * [ADDED]: Editor window has now "Find" and "Replace" toolbar buttons for those functions (which were already there, available under shortcuts).
+        * [ADDED]: #3106 ScriptingTcl has now "tcl_init" command to invoke full interpreter initialization, which creates [clock] commands and some others. It's not invoked automatically to avoid performane issues.
         * [CHANGE]: #3135 Re-enabled possibility to close database list panel (and reopen it from the View menu entry).
         * [BUGFIX]: #3118 #3124 Fixed double precision numbers formatting.
         * [BUGFIX]: DbAndroid plugin: Fixed 'adb' automatic detection under Linux.
@@ -13,6 +13,7 @@
         * [BUGFIX]: Fixed Ctrl+click (Cmd+click on MacOSX) handling of object names that require name wrapping (such as names with spaces in it).
         * [BUGFIX]: #3133 Fixed resolving tables with unusual (like cyrillic) characters in their names.
         * [BUGFIX]: #3096 Restored data editing by Return key hit, that got broken in 3.1.0 for MacOSX.
+        * [BUGFIX]: #3122 Several tweaks to Android shell mode connection.
         * [BUGFIX]: Compilation fixes.
 
 [3.1.0]
